# arqenor

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  go.work.sum
.cargo/: audit.toml  config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: senior-polyglot-dev.md
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-assign.yml  ci.yml  clippy-sarif.yml  enforce-main-policy.yml
arqenor-desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
arqenor-desktop/src/: index.css
arqenor-desktop/src-tauri/: Cargo.toml  tauri.conf.json
arqenor-driver/: Cargo.toml  Makefile.toml
arqenor-driver/client/: Cargo.toml
arqenor-driver/common/: Cargo.toml
arqenor-driver/driver/: Cargo.toml  arqenor_driver.inx
arqenor-driver/driver/src/: lib.rs  panic_impl.rs
arqenor-driver/driver/src/ipc/: messages.rs  mod.rs
arqenor-driver/driver/src/minifilter/: callbacks.rs  mod.rs
arqenor-driver/driver/src/process/: callbacks.rs  mod.rs
arqenor-driver/driver/src/protection/: callbacks.rs  mod.rs
arqenor-driver/driver/src/registry/: callbacks.rs
arqenor-ebpf/: Cargo.toml  build.rs
arqenor-ebpf/src/: events.rs  lib.rs  loader.rs  loader_stub.rs
arqenor-ebpf/src/probes/: memory.bpf.c  rootkit.bpf.c
configs/: arqenor.toml
docs/: security-audit-202604.md
docs/architecture/: crates.md  go-orchestrator.md  grpc-services.md  overview.md
docs/development/: build.md  contributing.md  platform-notes.md
docs/guides/: configuration.md  installation.md  kernel-driver-testing.md  usage.md
docs/reference/: api.md  cli.md  (+1 more)
go/: go.mod  go.sum
proto/: common.proto  host_analyzer.proto  network_scanner.proto
rust/arqenor-cli/: Cargo.toml
rust/arqenor-cli/src/: lib.rs  main.rs
rust/arqenor-cli/src/commands/: scan.rs  watch.rs
rust/arqenor-cli/tests/: ioc_boot.rs
rust/arqenor-core/: Cargo.toml
rust/arqenor-core/src/: config.rs  correlation.rs  ebpf_bridge.rs  error.rs  lib.rs  pipeline.rs
rust/arqenor-core/src/ioc/: checker.rs  feeds.rs  mod.rs  persistence.rs
rust/arqenor-core/src/models/: alert.rs  connection.rs  file_event.rs  incident.rs  mod.rs  network.rs  persistence.rs  process.rs
rust/arqenor-core/src/rules/: engine.rs  lolbin.rs  mod.rs  network.rs  sigma.rs  sigma_condition.rs  tls_fingerprint.rs
rust/arqenor-core/src/traits/: connection_monitor.rs  fs_scanner.rs  mod.rs  network_scanner.rs  persistence.rs  process_monitor.rs
rust/arqenor-grpc/: Cargo.toml  build.rs
rust/arqenor-grpc/src/: limits.rs  main.rs
rust/arqenor-grpc/src/server/: host_analyzer.rs  mod.rs  network_scanner.rs
rust/arqenor-ml/: Cargo.toml
rust/arqenor-ml/src/: lib.rs  pe_strings.rs
rust/arqenor-platform/: Cargo.toml
rust/arqenor-platform/src/: fim.rs  hash.rs  lib.rs  network_scanner.rs  path_validate.rs  services.rs  yara_scan.rs
rust/arqenor-platform/src/linux/: connections.rs  fs_scanner.rs  mod.rs  persistence.rs  persistence_advanced.rs  process_monitor.rs
rust/arqenor-platform/src/macos/: connections.rs  esf_dispatcher.rs  esf_monitor.rs  fs_scanner.rs  persistence.rs  process_monitor.rs
rust/arqenor-platform/src/windows/: byovd.rs  connections.rs  cred_guard.rs  cred_paths.rs  driver_bridge.rs  etw_consumer.rs  etw_monitor.rs  etw_tdh.rs  firewall.rs  fs_scanner.rs  memory_scan.rs  mod.rs  ntdll_check.rs  persistence.rs  process_monitor.rs  yara_rules.rs  yara_scan.rs
rust/arqenor-platform/src/yara_rules/: brute_ratel.yar  cobalt_strike.yar  encoded_powershell.yar  havoc.yar  meterpreter.yar  mimikatz.yar  mod.rs  pe_injection.yar  shellcode.yar  sliver.yar
rust/arqenor-store/: Cargo.toml
rust/arqenor-store/src/: duckdb_store.rs.disabled  ioc_store.rs  lib.rs  sqlite_store.rs
rust/arqenor-tui/: Cargo.toml  build.rs
rust/arqenor-tui/src/: app.rs  grpc_client.rs  main.rs  network.rs  ui.rs
rust/sentinel-cli/: Cargo.toml
rust/sentinel-cli/src/: main.rs
rust/sentinel-cli/src/commands/: scan.rs  watch.rs
rust/sentinel-core/: Cargo.toml
rust/sentinel-core/src/: error.rs  lib.rs  pipeline.rs
rust/sentinel-core/src/ioc/: feeds.rs
rust/sentinel-core/src/models/: alert.rs  connection.rs  mod.rs  network.rs  persistence.rs  process.rs
rust/sentinel-core/src/rules/: mod.rs  network.rs  sigma.rs
rust/sentinel-core/src/traits/: connection_monitor.rs  fs_scanner.rs  mod.rs  persistence.rs  process_monitor.rs
rust/sentinel-grpc/: Cargo.toml
rust/sentinel-grpc/src/: main.rs
rust/sentinel-grpc/src/server/: host_analyzer.rs
rust/sentinel-ml/: Cargo.toml
rust/sentinel-ml/src/: entropy.rs  lib.rs  pe_features.rs  pe_parser.rs  pe_scorer.rs
rust/sentinel-platform/: Cargo.toml
rust/sentinel-platform/src/: fim.rs  lib.rs
rust/sentinel-platform/src/linux/: connections.rs  fs_scanner.rs  persistence.rs  persistence_advanced.rs  process_monitor.rs
rust/sentinel-platform/src/macos/: connections.rs  esf_monitor.rs  fs_scanner.rs  mod.rs  persistence.rs  process_monitor.rs
rust/sentinel-platform/src/windows/: connections.rs  cred_guard.rs  driver_bridge.rs  etw_consumer.rs  etw_monitor.rs  firewall.rs  fs_scanner.rs  memory_scan.rs  mod.rs  ntdll_check.rs  persistence.rs  process_monitor.rs  yara_rules.rs  yara_scan.rs
rust/sentinel-store/: Cargo.toml
rust/sentinel-store/src/: duckdb_store.rs.disabled  lib.rs  sqlite_store.rs
rust/sentinel-tui/: Cargo.toml
rust/sentinel-tui/src/: app.rs  grpc_client.rs  main.rs  ui.rs
scripts/: gen-proto.ps1  setup-hooks.ps1  setup-hooks.sh
sentinel-desktop/: index.html  package.json
sentinel-desktop/src-tauri/: Cargo.toml  tauri.conf.json
sentinel-desktop/src-tauri/capabilities/: default.json
sentinel-desktop/src-tauri/src/: lib.rs  main.rs
sentinel-driver/: Cargo.toml  Makefile.toml  rust-toolchain.toml
sentinel-driver/client/: Cargo.toml
sentinel-driver/client/src/: error.rs  lib.rs  recv.rs
sentinel-ebpf/: Cargo.toml
(+78 files in other folders)
