[workspace]
resolver = "2"
members = [
    "rust/sentinel-core",
    "rust/sentinel-platform",
    "rust/sentinel-grpc",
    "rust/sentinel-store",
    "rust/sentinel-tui",
    "rust/sentinel-cli",
]

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
async-trait        = "0.1"
tonic              = "0.12"
prost              = "0.13"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sha2               = "0.10"
hex                = "0.4"
rusqlite           = { version = "0.31", features = ["bundled"] }
# duckdb added in Phase 4 (event analytics) — arrow-arith conflict in 0.10
walkdir            = "2"
config             = "0.14"
toml               = "0.8"
ratatui            = "0.27"
crossterm          = "0.27"
clap               = { version = "4", features = ["derive"] }
sysinfo            = "0.30"
once_cell          = "1"
tokio-stream       = "0.1"

[workspace.dependencies.windows]
version  = "0.52"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_System_Com",
]
