[workspace]
resolver = "2"
members = [
    "rust/arqenor-core",
    "rust/arqenor-platform",
    "rust/arqenor-grpc",
    "rust/arqenor-store",
    "rust/arqenor-tui",
    "rust/arqenor-cli",
    "arqenor-ebpf",           # Phase 2 — Linux eBPF kernel telemetry (B2-B6)
]

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
async-trait        = "0.1"
tonic              = "0.14"
tonic-prost        = "0.14"
prost              = "0.14"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sha2               = "0.11"
hex                = "0.4"
rusqlite           = { version = "0.31", features = ["bundled"] }
# duckdb added in Phase 4 (event analytics) — arrow-arith conflict in 0.10
walkdir            = "2"
config             = "0.14"
toml               = "0.8"
ratatui            = "0.30"
crossterm          = "0.29"
clap               = { version = "4", features = ["derive"] }
sysinfo            = "0.38"
once_cell          = "1"
tokio-stream       = "0.1"

[workspace.dependencies.windows]
version  = "0.59"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Ole",
    "Win32_System_Variant",
    # Previously activated transitively via sysinfo 0.30's windows-sys dependency
    # (needed by fs_scanner's ReadDirectoryChangesW). sysinfo 0.38 no longer
    # pulls this in, so we enable it explicitly.
    "Win32_System_IO",
]
