[workspace]
resolver = "2"
members = [
    "rust/arqenor-core",
    "rust/arqenor-platform",
    "rust/arqenor-grpc",
    "rust/arqenor-store",
    "rust/arqenor-tui",
    "rust/arqenor-cli",
    "arqenor-ebpf",           # Phase 2 — Linux eBPF kernel telemetry (B2-B6)
]

# Shared package metadata. Each member crate inherits these via
# `license.workspace = true` etc. so cargo-deny sees a license expression
# on every workspace crate (root LICENSE alone is not enough — `cargo deny
# check licenses` looks at each crate's manifest).
[workspace.package]
license     = "Apache-2.0"
edition     = "2021"
repository  = "https://github.com/Arqenor/arqenor"
homepage    = "https://github.com/Arqenor/arqenor"
authors     = ["Arqenor contributors"]
# 1.87 — first stable release with both `Option::is_none_or` (1.82) and
# `u*::is_multiple_of` (1.87), both used in arqenor-core::rules::tls_fingerprint.
rust-version = "1.87"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
async-trait        = "0.1"
tonic              = "0.14"
tonic-prost        = "0.14"
prost              = "0.14"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
sha2               = "0.11"
hex                = "0.4"
rusqlite           = { version = "0.39", features = ["bundled"] }
# duckdb added in Phase 4 (event analytics) — arrow-arith conflict in 0.10
walkdir            = "2"
config             = "0.14"
toml               = "0.8"
ratatui            = "0.30"
crossterm          = "0.29"
clap               = { version = "4", features = ["derive"] }
sysinfo            = "0.38"
once_cell          = "1"
tokio-stream       = "0.1"

[workspace.dependencies.windows]
version  = "0.62"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Ole",
    "Win32_System_Variant",
    # Previously activated transitively via sysinfo 0.30's windows-sys dependency
    # (needed by fs_scanner's ReadDirectoryChangesW). sysinfo 0.38 no longer
    # pulls this in, so we enable it explicitly.
    "Win32_System_IO",
]

# ─────────────────────────────────────────────────────────────────────────────
# windows-sys consolidation — see [DEP-WINSYS-DUP] in
# docs/security-audit-202604.md.
#
# Three transitive versions are present in Cargo.lock today:
#
#   - 0.52.0 — pulled by `ring 0.17.14` and `rustix 0.38.44` (legacy line,
#     still consumed via the tonic 0.14 / hyper / rustls chain).
#   - 0.60.2 — pulled by `quinn-udp 0.5.14` (HTTP/3 stack — not yet bumped
#     upstream to 0.61).
#   - 0.61.2 — dominant version, used by 13+ direct/indirect crates
#     (anstyle-wincon, errno, home, if-addrs, mio, rustix 1.1.4, socket2,
#     tempfile, tokio, wasmtime-*, winapi-util, winreg, …).
#
# Strategy: pin a single workspace entry on the modern major (0.61). Workspace
# crates that depend on `windows-sys` should use `windows-sys = { workspace =
# true }` so additions of new direct deps are forced through one decision
# point. The 0.52 / 0.60 dupes will only disappear once their upstream
# parents (`ring`, `rustix 0.38`, `quinn-udp`) cut a release that bumps —
# we cannot consolidate further without forking, which would defeat the
# whole point of upstream tracking.
#
# Note: we deliberately do NOT add a `[patch.crates-io]` to force-rewrite
# the older versions. `windows-sys` has had several breaking API/feature
# changes between 0.52 → 0.60 → 0.61 (the `Win32_*` feature names were
# reorganised); silently substituting would break the parent crates in
# subtle ways. Track the trio in `cargo-deny` (`bans.multiple-versions =
# "warn"`) and revisit when upstream catches up.
[workspace.dependencies.windows-sys]
version  = "0.61"
features = []
