[package]
name    = "arqenor-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
serde   = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.21"
tokio     = { workspace = true }
anyhow    = { workspace = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = "0.26"
