[package]
name    = "arqenor-driver"
version = "0.1.0"
edition = "2021"
publish = false
build   = "build.rs"

[lib]
name       = "arqenor_driver"
crate-type = ["cdylib"]

[features]
default = []
# Gate ETW-TI behind a feature — requires ELAM signing (MVI membership, 12+ months)
etw-ti = []

[profile.dev]
panic     = "abort"
lto       = true
opt-level = 1

[profile.release]
panic         = "abort"
lto           = true
opt-level     = 3
codegen-units = 1

[dependencies]
wdk        = { git = "https://github.com/microsoft/windows-drivers-rs", package = "wdk" }
wdk-sys    = { git = "https://github.com/microsoft/windows-drivers-rs", package = "wdk-sys" }
wdk-alloc  = { git = "https://github.com/microsoft/windows-drivers-rs", package = "wdk-alloc" }
wdk-panic  = { git = "https://github.com/microsoft/windows-drivers-rs", package = "wdk-panic" }
wdk-macros = { git = "https://github.com/microsoft/windows-drivers-rs", package = "wdk-macros" }

arqenor-driver-common = { path = "../common" }

[build-dependencies]
wdk-build = { git = "https://github.com/microsoft/windows-drivers-rs", package = "wdk-build" }
