[package]
name    = "arqenor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arqenor"
path = "src/main.rs"

[dependencies]
arqenor-core     = { path = "../arqenor-core" }
arqenor-platform = { path = "../arqenor-platform" }
arqenor-store    = { path = "../arqenor-store" }
clap              = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }

[dev-dependencies]
tempfile = "3"
