[package]
name    = "arqenor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde_yaml  = "0.9"
regex       = "1"
base64      = "0.22"
reqwest     = { version = "0.12", features = ["rustls-tls"], default-features = false }
