[package]
name                 = "arqenor-core"
version              = "0.1.0"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
once_cell   = { workspace = true }
toml        = { workspace = true }
# DEP-SERDE_YAML: replaced unmaintained `serde_yaml` (deprecated 2024-04) with
# the actively maintained drop-in fork `serde_yml`.
serde_yml   = "0.0.12"
regex       = "1"
base64      = "0.22"
csv         = "1"
futures-util = "0.3"
reqwest     = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
