[package]
name                 = "arqenor-grpc"
version              = "0.1.0"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
rust-version.workspace = true

[[bin]]
name = "arqenor-grpc"
path = "src/main.rs"

[dependencies]
arqenor-core     = { path = "../arqenor-core" }
arqenor-platform = { path = "../arqenor-platform" }
arqenor-store    = { path = "../arqenor-store" }
tonic             = { workspace = true }
tonic-prost       = { workspace = true }
prost             = { workspace = true }
prost-types       = "0.14"
tokio             = { workspace = true }
tokio-stream      = { workspace = true }
tower             = { version = "0.5", features = ["limit"] }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow            = { workspace = true }
serde             = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }

[build-dependencies]
tonic-prost-build    = "0.14"
protoc-bin-vendored  = "3"

[dev-dependencies]
tempfile = "3"
