[package]
name    = "arqenor-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
arqenor-core = { path = "../arqenor-core" }
async-trait   = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
sysinfo       = { workspace = true }
walkdir       = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
anyhow        = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
thiserror     = { workspace = true }
cfg-if        = "1"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
winreg  = "0.52"
wmi     = "0.14"
yara-x  = { version = "1.14", optional = true }
tokio-stream = { workspace = true, optional = true }
arqenor-driver-client = { path = "../../arqenor-driver/client", optional = true }
arqenor-driver-common = { path = "../../arqenor-driver/common", optional = true, features = ["std"] }

[features]
default = []
yara = ["yara-x"]
kernel-driver = ["arqenor-driver-client", "arqenor-driver-common", "tokio-stream"]
firewall-check = []

[target.'cfg(target_os = "linux")'.dependencies]
procfs   = "0.16"
inotify  = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
plist        = "1"
endpoint-sec = "0.5"
