[package]
name    = "arqenor-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
arqenor-core = { path = "../arqenor-core" }
async-trait   = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
sysinfo       = { workspace = true }
walkdir       = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
anyhow        = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
thiserror     = { workspace = true }
cfg-if        = "1"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
winreg  = "0.56"
wmi     = "=0.18.4"

[features]
default = []
firewall-check = []

[target.'cfg(target_os = "linux")'.dependencies]
procfs   = "0.18"
inotify  = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
plist        = "1"
endpoint-sec = "0.5"
