[package]
name                 = "arqenor-store"
version              = "0.1.0"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
rust-version.workspace = true

[dependencies]
arqenor-core = { path = "../arqenor-core" }
rusqlite      = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
