[package]
name    = "arqenor-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arqenor-tui"
path = "src/main.rs"

[dependencies]
arqenor-core     = { path = "../arqenor-core" }
arqenor-platform = { path = "../arqenor-platform", features = ["firewall-check"] }
chrono            = { workspace = true }
tokio-stream      = { workspace = true }
if-addrs          = "0.13"
ratatui        = { workspace = true }
crossterm      = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
tonic          = { workspace = true }
prost          = { workspace = true }
prost-types    = "0.13"

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"
