[package]
name                 = "arqenor-tui"
version              = "0.1.0"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
rust-version.workspace = true

[[bin]]
name = "arqenor-tui"
path = "src/main.rs"

[dependencies]
arqenor-core     = { path = "../arqenor-core" }
arqenor-platform = { path = "../arqenor-platform", features = ["firewall-check"] }
chrono            = { workspace = true }
tokio-stream      = { workspace = true }
if-addrs          = "0.15"
ratatui        = { workspace = true }
crossterm      = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
tonic          = { workspace = true }
tonic-prost    = { workspace = true }
prost          = { workspace = true }
prost-types    = "0.14"

[build-dependencies]
tonic-prost-build   = "0.14"
protoc-bin-vendored = "3"
