[package]
name    = "sentinel-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
sentinel-core     = { path = "../sentinel-core" }
sentinel-platform = { path = "../sentinel-platform" }
sentinel-store    = { path = "../sentinel-store" }
clap              = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json        = { workspace = true }
