[package]
name    = "sentinel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
