[package]
name    = "sentinel-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel-grpc"
path = "src/main.rs"

[dependencies]
sentinel-core     = { path = "../sentinel-core" }
sentinel-platform = { path = "../sentinel-platform" }
sentinel-store    = { path = "../sentinel-store" }
tonic             = { workspace = true }
prost             = { workspace = true }
prost-types       = "0.13"
tokio             = { workspace = true }
tokio-stream      = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow            = { workspace = true }
serde             = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }

[build-dependencies]
tonic-build          = "0.12"
protoc-bin-vendored  = "3"
