[package]
name    = "sentinel-ml"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
serde         = { workspace = true }
tracing       = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
regex         = "1"
