[package]
name    = "sentinel-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
async-trait   = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
sysinfo       = { workspace = true }
walkdir       = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
anyhow        = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
thiserror     = { workspace = true }
cfg-if        = "1"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
winreg  = "0.52"
wmi     = "0.14"
tokio-stream = { workspace = true, optional = true }
sentinel-driver-client = { path = "../../sentinel-driver/client", optional = true }
sentinel-driver-common = { path = "../../sentinel-driver/common", optional = true, features = ["std"] }

[features]
default = []
kernel-driver = ["sentinel-driver-client", "sentinel-driver-common", "tokio-stream"]

[target.'cfg(target_os = "linux")'.dependencies]
procfs   = "0.16"
inotify  = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
plist        = "1"
endpoint-sec = "0.5"
