[package]
name    = "sentinel-store"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
rusqlite      = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
