[package]
name    = "sentinel-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name       = "sentinel_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
if-addrs      = "0.13"
dns-lookup    = "2"
chrono        = { workspace = true }
uuid          = { workspace = true }
sentinel-core     = { path = "../../rust/sentinel-core" }
sentinel-platform = { path = "../../rust/sentinel-platform" }
