[package]
name    = "sentinel-driver-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sentinel-driver-common = { path = "../common" }
windows  = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_IO",
    "Win32_System_Threading",
] }
tokio    = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing  = "0.1"
thiserror = "1"
